INIFile: fixes `parseBool`

--- a/game/tests/resources/WaterINI/water.ini
+++ b/game/tests/resources/WaterINI/water.ini
@@ -33,6 +33,6 @@ WaterTransparency
   TransparentWaterDepth = 2.0
   StandingWaterColor = R:254 G:253 B:255
   StandingWaterTexture = swamp.tga
-  AdditiveBlending = no
+  AdditiveBlending = yes; bla
   RadarWaterColor = R:120 G:130 B:255
 End
