INIFile: fixes some comment handling in `parseString`

--- a/game/tests/resources/WaterINI/water.ini
+++ b/game/tests/resources/WaterINI/water.ini
@@ -1,6 +1,6 @@
 WaterSet EVENING
   SkyTexture = orange_red.tga
-  WaterTexture = purple.tga
+  WaterTexture = purple.tga; bla
   Vertex00Color = R:151 G:150 B:150
   Vertex01Color = R:150 G:150 B:153
   Vertex10Color = R:150 G:152 B:150
