--- a/game/tests/resources/SoundEffectsINI/effects.ini
+++ b/game/tests/resources/SoundEffectsINI/effects.ini
@@ -4,7 +4,7 @@
 ;
 
 AudioEvent Toot
-  Volume           = 98
+  Volume           = 98; blow your ears
   VolumeShift      = -10
   MinVolume        = 27
   PitchShift       = 12 34
