INIFile: more edge cases and minor code reorganization for colors

--- a/game/tests/resources/WaterINI/water.ini
+++ b/game/tests/resources/WaterINI/water.ini
@@ -11,7 +11,7 @@ WaterSet EVENING
   VScrollPerMS = 0.25
   SkyTexelsPerUnit = 0.5
   WaterRepeatCount = 2
-End
+End;;
 
 WaterSet DUSK
   SkyTexture = dusk.tga
