BattlefieldRenderer: code refactoring of camera handling

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -150,6 +150,7 @@ ADD_EXECUTABLE(zhen
   game/formats/TGAFile.cpp
   game/formats/WNDFile.cpp
   game/formats/W3DFile.cpp
+  game/gfx/Camera.cpp
   game/gfx/FrameDisposable.cpp
   game/gfx/HostTexture.cpp
   game/gfx/Model.cpp
@@ -403,6 +404,7 @@ ADD_UNIT_TEST(WNDFile
 ADD_GAME_TEST(MAPFile
   game/Battlefield.cpp
   game/BattlefieldFactory.cpp
+  game/gfx/Camera.cpp
   game/gfx/HostTexture.cpp
   game/gfx/Model.cpp
   game/gfx/ModelCache.cpp
